src/antlr-generated/grimoireParser.cpp

// Generated from grimoire.g4 by ANTLR 4.10.1


#include "grimoireListener.h"
#include "grimoireVisitor.h"

#include "grimoireParser.h"


using namespace antlrcpp;
using namespace antlrcppgrim;

using namespace antlr4;

namespace {

struct GrimoireParserStaticData final {
  GrimoireParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  GrimoireParserStaticData(const GrimoireParserStaticData&) = delete;
  GrimoireParserStaticData(GrimoireParserStaticData&&) = delete;
  GrimoireParserStaticData& operator=(const GrimoireParserStaticData&) = delete;
  GrimoireParserStaticData& operator=(GrimoireParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

std::once_flag grimoireParserOnceFlag;
GrimoireParserStaticData *grimoireParserStaticData = nullptr;

void grimoireParserInitialize() {
  assert(grimoireParserStaticData == nullptr);
  auto staticData = std::make_unique<GrimoireParserStaticData>(
    std::vector<std::string>{
      "grimoire", "declarationsegment", "vardeclarationlist", "vardeclaration", 
      "functdeclarationlist", "functdeclaration", "beginfunc", "endfunc", 
      "type", "optionalinit", "paramlist", "rettype", "param", "localslist", 
      "localdeclaration", "statseq", "stattail", "stat", "assignstat", "funccall", 
      "funcexpr", "condstat", "condstattail", "ifcond", "elsecond", "endcondstat", 
      "forstat", "endfor", "retstat", "expr", "term", "exprlist", "lvaluetail"
    },
    std::vector<std::string>{
      "", "", "", "", "'array'", "'break'", "'do'", "'if'", "'else'", "'for'", 
      "'spell'", "'let'", "'in'", "'of'", "'then'", "'to'", "'from'", "'summon'", 
      "'while'", "'endif'", "'begin'", "'end'", "'enddo'", "'return'", "'int'", 
      "'float'", "'embodies'", "'becomes'", "", "", "", "','", "':'", "';'", 
      "'('", "')'", "'['", "']'", "'{'", "'}'", "'+'", "'-'", "'*'", "'/'", 
      "'=='", "'=/='", "'<'", "'>'", "'<='", "'>='", "'&'", "'|'", "'~'"
    },
    std::vector<std::string>{
      "", "WHITESPACE", "NEWLINE", "COMMENT", "ARRAY", "BREAK", "DO", "IF", 
      "ELSE", "FOR", "FUNC", "LET", "IN", "OF", "THEN", "TO", "FROM", "SUMMON", 
      "WHILE", "ENDIF", "BEGIN", "END", "ENDDO", "RET", "INT", "FLOAT", 
      "EMBODIES", "ASSIGNMENT", "ID", "INTLIT", "FLOATLIT", "COMMA", "COLON", 
      "SEMICOLON", "OPENBRACKET", "CLOSEBRACKET", "OPENSQBRACKET", "CLOSESQBRACKET", 
      "OPENBLOCK", "CLOSEBLOCK", "ADD", "SUB", "MULT", "DIV", "EQUAL", "NOTEQUAL", 
      "LESS", "GREAT", "LESSEQUAL", "GREATEQUAL", "AND", "OR", "NOT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  grimoireParserStaticData = staticData.release();
}

}

grimoireParser::grimoireParser(TokenStream *input) : grimoireParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

grimoireParser::grimoireParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  grimoireParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *grimoireParserStaticData->atn, grimoireParserStaticData->decisionToDFA, grimoireParserStaticData->sharedContextCache, options);
}

grimoireParser::~grimoireParser() {
  delete _interpreter;
}

const atn::ATN& grimoireParser::getATN() const {
  return *grimoireParserStaticData->atn;
}

std::string grimoireParser::getGrammarFileName() const {
  return "grimoire.g4";
}

const std::vector<std::string>& grimoireParser::getRuleNames() const {
  return grimoireParserStaticData->ruleNames;
}

const dfa::Vocabulary& grimoireParser::getVocabulary() const {
  return grimoireParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView grimoireParser::getSerializedATN() const {
  return grimoireParserStaticData->serializedATN;
}


//----------------- GrimoireContext ------------------------------------------------------------------

grimoireParser::GrimoireContext::GrimoireContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

grimoireParser::DeclarationsegmentContext* grimoireParser::GrimoireContext::declarationsegment() {
  return getRuleContext<grimoireParser::DeclarationsegmentContext>(0);
}


size_t grimoireParser::GrimoireContext::getRuleIndex() const {
  return grimoireParser::RuleGrimoire;
}

void grimoireParser::GrimoireContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<grimoireListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGrimoire(this);
}

void grimoireParser::GrimoireContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<grimoireListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGrimoire(this);
}


std::any grimoireParser::GrimoireContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<grimoireVisitor*>(visitor))
    return parserVisitor->visitGrimoire(this);
  else
    return visitor->visitChildren(this);
}

grimoireParser::GrimoireContext* grimoireParser::grimoire() {
  GrimoireContext *_localctx = _tracker.createInstance<GrimoireContext>(_ctx, getState());
  enterRule(_localctx, 0, grimoireParser::RuleGrimoire);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(66);
    declarationsegment();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationsegmentContext ------------------------------------------------------------------

grimoireParser::DeclarationsegmentContext::DeclarationsegmentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

grimoireParser::VardeclarationlistContext* grimoireParser::DeclarationsegmentContext::vardeclarationlist() {
  return getRuleContext<grimoireParser::VardeclarationlistContext>(0);
}

grimoireParser::FunctdeclarationlistContext* grimoireParser::DeclarationsegmentContext::functdeclarationlist() {
  return getRuleContext<grimoireParser::FunctdeclarationlistContext>(0);
}


size_t grimoireParser::DeclarationsegmentContext::getRuleIndex() const {
  return grimoireParser::RuleDeclarationsegment;
}

void grimoireParser::DeclarationsegmentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<grimoireListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeclarationsegment(this);
}

void grimoireParser::DeclarationsegmentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<grimoireListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeclarationsegment(this);
}


std::any grimoireParser::DeclarationsegmentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<grimoireVisitor*>(visitor))
    return parserVisitor->visitDeclarationsegment(this);
  else
    return visitor->visitChildren(this);
}

grimoireParser::DeclarationsegmentContext* grimoireParser::declarationsegment() {
  DeclarationsegmentContext *_localctx = _tracker.createInstance<DeclarationsegmentContext>(_ctx, getState());
  enterRule(_localctx, 2, grimoireParser::RuleDeclarationsegment);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(68);
    vardeclarationlist();
    setState(69);
    functdeclarationlist();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VardeclarationlistContext ------------------------------------------------------------------

grimoireParser::VardeclarationlistContext::VardeclarationlistContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

grimoireParser::VardeclarationContext* grimoireParser::VardeclarationlistContext::vardeclaration() {
  return getRuleContext<grimoireParser::VardeclarationContext>(0);
}

grimoireParser::VardeclarationlistContext* grimoireParser::VardeclarationlistContext::vardeclarationlist() {
  return getRuleContext<grimoireParser::VardeclarationlistContext>(0);
}


size_t grimoireParser::VardeclarationlistContext::getRuleIndex() const {
  return grimoireParser::RuleVardeclarationlist;
}

void grimoireParser::VardeclarationlistContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<grimoireListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVardeclarationlist(this);
}

void grimoireParser::VardeclarationlistContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<grimoireListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVardeclarationlist(this);
}


std::any grimoireParser::VardeclarationlistContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<grimoireVisitor*>(visitor))
    return parserVisitor->visitVardeclarationlist(this);
  else
    return visitor->visitChildren(this);
}

grimoireParser::VardeclarationlistContext* grimoireParser::vardeclarationlist() {
  VardeclarationlistContext *_localctx = _tracker.createInstance<VardeclarationlistContext>(_ctx, getState());
  enterRule(_localctx, 4, grimoireParser::RuleVardeclarationlist);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(75);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case grimoireParser::EOF:
      case grimoireParser::FUNC: {
        enterOuterAlt(_localctx, 1);

        break;
      }

      case grimoireParser::SUMMON: {
        enterOuterAlt(_localctx, 2);
        setState(72);
        vardeclaration();
        setState(73);
        vardeclarationlist();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VardeclarationContext ------------------------------------------------------------------

grimoireParser::VardeclarationContext::VardeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* grimoireParser::VardeclarationContext::SUMMON() {
  return getToken(grimoireParser::SUMMON, 0);
}

tree::TerminalNode* grimoireParser::VardeclarationContext::ID() {
  return getToken(grimoireParser::ID, 0);
}

tree::TerminalNode* grimoireParser::VardeclarationContext::FROM() {
  return getToken(grimoireParser::FROM, 0);
}

grimoireParser::TypeContext* grimoireParser::VardeclarationContext::type() {
  return getRuleContext<grimoireParser::TypeContext>(0);
}

grimoireParser::OptionalinitContext* grimoireParser::VardeclarationContext::optionalinit() {
  return getRuleContext<grimoireParser::OptionalinitContext>(0);
}

tree::TerminalNode* grimoireParser::VardeclarationContext::SEMICOLON() {
  return getToken(grimoireParser::SEMICOLON, 0);
}


size_t grimoireParser::VardeclarationContext::getRuleIndex() const {
  return grimoireParser::RuleVardeclaration;
}

void grimoireParser::VardeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<grimoireListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVardeclaration(this);
}

void grimoireParser::VardeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<grimoireListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVardeclaration(this);
}


std::any grimoireParser::VardeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<grimoireVisitor*>(visitor))
    return parserVisitor->visitVardeclaration(this);
  else
    return visitor->visitChildren(this);
}

grimoireParser::VardeclarationContext* grimoireParser::vardeclaration() {
  VardeclarationContext *_localctx = _tracker.createInstance<VardeclarationContext>(_ctx, getState());
  enterRule(_localctx, 6, grimoireParser::RuleVardeclaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(77);
    match(grimoireParser::SUMMON);
    setState(78);
    match(grimoireParser::ID);
    setState(79);
    match(grimoireParser::FROM);
    setState(80);
    type();
    setState(81);
    optionalinit();
    setState(82);
    match(grimoireParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctdeclarationlistContext ------------------------------------------------------------------

grimoireParser::FunctdeclarationlistContext::FunctdeclarationlistContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

grimoireParser::FunctdeclarationContext* grimoireParser::FunctdeclarationlistContext::functdeclaration() {
  return getRuleContext<grimoireParser::FunctdeclarationContext>(0);
}

grimoireParser::FunctdeclarationlistContext* grimoireParser::FunctdeclarationlistContext::functdeclarationlist() {
  return getRuleContext<grimoireParser::FunctdeclarationlistContext>(0);
}


size_t grimoireParser::FunctdeclarationlistContext::getRuleIndex() const {
  return grimoireParser::RuleFunctdeclarationlist;
}

void grimoireParser::FunctdeclarationlistContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<grimoireListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunctdeclarationlist(this);
}

void grimoireParser::FunctdeclarationlistContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<grimoireListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunctdeclarationlist(this);
}


std::any grimoireParser::FunctdeclarationlistContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<grimoireVisitor*>(visitor))
    return parserVisitor->visitFunctdeclarationlist(this);
  else
    return visitor->visitChildren(this);
}

grimoireParser::FunctdeclarationlistContext* grimoireParser::functdeclarationlist() {
  FunctdeclarationlistContext *_localctx = _tracker.createInstance<FunctdeclarationlistContext>(_ctx, getState());
  enterRule(_localctx, 8, grimoireParser::RuleFunctdeclarationlist);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(88);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case grimoireParser::EOF: {
        enterOuterAlt(_localctx, 1);

        break;
      }

      case grimoireParser::FUNC: {
        enterOuterAlt(_localctx, 2);
        setState(85);
        functdeclaration();
        setState(86);
        functdeclarationlist();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctdeclarationContext ------------------------------------------------------------------

grimoireParser::FunctdeclarationContext::FunctdeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

grimoireParser::BeginfuncContext* grimoireParser::FunctdeclarationContext::beginfunc() {
  return getRuleContext<grimoireParser::BeginfuncContext>(0);
}

grimoireParser::LocalslistContext* grimoireParser::FunctdeclarationContext::localslist() {
  return getRuleContext<grimoireParser::LocalslistContext>(0);
}

grimoireParser::StatseqContext* grimoireParser::FunctdeclarationContext::statseq() {
  return getRuleContext<grimoireParser::StatseqContext>(0);
}

grimoireParser::EndfuncContext* grimoireParser::FunctdeclarationContext::endfunc() {
  return getRuleContext<grimoireParser::EndfuncContext>(0);
}


size_t grimoireParser::FunctdeclarationContext::getRuleIndex() const {
  return grimoireParser::RuleFunctdeclaration;
}

void grimoireParser::FunctdeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<grimoireListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunctdeclaration(this);
}

void grimoireParser::FunctdeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<grimoireListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunctdeclaration(this);
}


std::any grimoireParser::FunctdeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<grimoireVisitor*>(visitor))
    return parserVisitor->visitFunctdeclaration(this);
  else
    return visitor->visitChildren(this);
}

grimoireParser::FunctdeclarationContext* grimoireParser::functdeclaration() {
  FunctdeclarationContext *_localctx = _tracker.createInstance<FunctdeclarationContext>(_ctx, getState());
  enterRule(_localctx, 10, grimoireParser::RuleFunctdeclaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(90);
    beginfunc();
    setState(91);
    localslist();
    setState(92);
    statseq();
    setState(93);
    endfunc();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BeginfuncContext ------------------------------------------------------------------

grimoireParser::BeginfuncContext::BeginfuncContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* grimoireParser::BeginfuncContext::FUNC() {
  return getToken(grimoireParser::FUNC, 0);
}

tree::TerminalNode* grimoireParser::BeginfuncContext::ID() {
  return getToken(grimoireParser::ID, 0);
}

tree::TerminalNode* grimoireParser::BeginfuncContext::OPENBRACKET() {
  return getToken(grimoireParser::OPENBRACKET, 0);
}

grimoireParser::ParamlistContext* grimoireParser::BeginfuncContext::paramlist() {
  return getRuleContext<grimoireParser::ParamlistContext>(0);
}

tree::TerminalNode* grimoireParser::BeginfuncContext::CLOSEBRACKET() {
  return getToken(grimoireParser::CLOSEBRACKET, 0);
}

grimoireParser::RettypeContext* grimoireParser::BeginfuncContext::rettype() {
  return getRuleContext<grimoireParser::RettypeContext>(0);
}

tree::TerminalNode* grimoireParser::BeginfuncContext::OPENBLOCK() {
  return getToken(grimoireParser::OPENBLOCK, 0);
}


size_t grimoireParser::BeginfuncContext::getRuleIndex() const {
  return grimoireParser::RuleBeginfunc;
}

void grimoireParser::BeginfuncContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<grimoireListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBeginfunc(this);
}

void grimoireParser::BeginfuncContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<grimoireListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBeginfunc(this);
}


std::any grimoireParser::BeginfuncContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<grimoireVisitor*>(visitor))
    return parserVisitor->visitBeginfunc(this);
  else
    return visitor->visitChildren(this);
}

grimoireParser::BeginfuncContext* grimoireParser::beginfunc() {
  BeginfuncContext *_localctx = _tracker.createInstance<BeginfuncContext>(_ctx, getState());
  enterRule(_localctx, 12, grimoireParser::RuleBeginfunc);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(95);
    match(grimoireParser::FUNC);
    setState(96);
    match(grimoireParser::ID);
    setState(97);
    match(grimoireParser::OPENBRACKET);
    setState(98);
    paramlist();
    setState(99);
    match(grimoireParser::CLOSEBRACKET);
    setState(100);
    rettype();
    setState(101);
    match(grimoireParser::OPENBLOCK);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- EndfuncContext ------------------------------------------------------------------

grimoireParser::EndfuncContext::EndfuncContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* grimoireParser::EndfuncContext::CLOSEBLOCK() {
  return getToken(grimoireParser::CLOSEBLOCK, 0);
}


size_t grimoireParser::EndfuncContext::getRuleIndex() const {
  return grimoireParser::RuleEndfunc;
}

void grimoireParser::EndfuncContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<grimoireListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterEndfunc(this);
}

void grimoireParser::EndfuncContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<grimoireListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitEndfunc(this);
}


std::any grimoireParser::EndfuncContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<grimoireVisitor*>(visitor))
    return parserVisitor->visitEndfunc(this);
  else
    return visitor->visitChildren(this);
}

grimoireParser::EndfuncContext* grimoireParser::endfunc() {
  EndfuncContext *_localctx = _tracker.createInstance<EndfuncContext>(_ctx, getState());
  enterRule(_localctx, 14, grimoireParser::RuleEndfunc);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(103);
    match(grimoireParser::CLOSEBLOCK);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

grimoireParser::TypeContext::TypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* grimoireParser::TypeContext::INT() {
  return getToken(grimoireParser::INT, 0);
}

tree::TerminalNode* grimoireParser::TypeContext::ARRAY() {
  return getToken(grimoireParser::ARRAY, 0);
}

tree::TerminalNode* grimoireParser::TypeContext::OPENSQBRACKET() {
  return getToken(grimoireParser::OPENSQBRACKET, 0);
}

tree::TerminalNode* grimoireParser::TypeContext::INTLIT() {
  return getToken(grimoireParser::INTLIT, 0);
}

tree::TerminalNode* grimoireParser::TypeContext::CLOSESQBRACKET() {
  return getToken(grimoireParser::CLOSESQBRACKET, 0);
}

tree::TerminalNode* grimoireParser::TypeContext::OF() {
  return getToken(grimoireParser::OF, 0);
}


size_t grimoireParser::TypeContext::getRuleIndex() const {
  return grimoireParser::RuleType;
}

void grimoireParser::TypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<grimoireListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterType(this);
}

void grimoireParser::TypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<grimoireListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitType(this);
}

